crates/hpc-core/tests/compile-fail/api_inflight_read.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_inflight_read.rs
  |
  |     q.read_blocking(&buf_inflight, &mut out);
  |       ------------- ^^^^^^^^^^^^^ expected `&DeviceBuffer<'_, '_, u32, Ready>`, found `&DeviceBuffer<'_, '_, u32, InFlight>`
  |       |
  |       arguments to this method are incorrect
  |
  = note: expected reference `&DeviceBuffer<'_, '_, u32, hpc_core::Ready>`
             found reference `&DeviceBuffer<'_, '_, u32, InFlight>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn read_blocking<T>(&'ctx self, _buf: &DeviceBuffer<'id, 'ctx, T, Ready>, _out: &mut [T])
  |            ^^^^^^^^^^^^^
